[package]
name = "ende"
version = "0.1.0"
authors = ["andrewgy8 <andrewgy8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
osm4routing = "0.2.0"
pdf = "0.5.0"
docopt = "0.6.86"
haversiner = "0.3.0"
rayon = "1.5"
